--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,27 @@
-# Inside of setup.cfg
 [metadata]
-description_file = README.md
+name = ethoPy
+version = 0.1
+author = Maximilian Knoll
+author_email = m.knoll@dkfz.de
+description = Helper function for analysis of Varian ETHOS data
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/mknoll/ethoPy
+download_url = https://github.com/mknoll/ethoPy/archive/refs/tags/v_01.tar.gz
+license = MIT
+keywords = Radiotherapy, ETHOS
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Topic :: Software Development :: Build Tools
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.11
+
+[options]
+packages = find:
+install_requires =
+    nibabel
+    SimpleITK
+    dcmrtstruct2nii
+python_requires = >=3.8
+
