--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = ethoPy
+name = ethoPyRT
 version = 0.1
 author = Maximilian Knoll
 author_email = m.knoll@dkfz.de
@@ -7,7 +7,7 @@ description = Helper function for analysis of Varian ETHOS data
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/mknoll/ethoPy
-download_url = https://github.com/mknoll/ethoPy/archive/refs/tags/v_01.tar.gz
+download_url = https://github.com/mknoll/ethoPyRT/archive/refs/tags/v_01.tar.gz
 license = MIT
 keywords = Radiotherapy, ETHOS
 classifiers =
@@ -20,8 +20,9 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    nibabel
-    SimpleITK
     dcmrtstruct2nii
+    nibabel
+    platipy
+    SimpleITK
 python_requires = >=3.8
 
