--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ethoPyRT
-version = 0.1.3
+version = 0.1.4
 author = Maximilian Knoll
 author_email = m.knoll@dkfz.de
 description = Helper function for analysis of Varian ETHOS data
@@ -23,6 +23,7 @@ install_requires =
     dcmrtstruct2nii
     nibabel
     platipy
+    pyradiomics
     SimpleITK
 python_requires = >=3.8
 
